# OldPlayer

./: 2.0.txt  CHANGELOG_v1.6.md  CMakeLists.txt  LICENSE.txt  README.md  customtimedialog.cpp  customtimedialog.h  fontsettingsdialog.cpp  fontsettingsdialog.h  main(白色版）.cpp  main.cpp  mainwindow.cpp  mainwindow.h  playlist.cpp  playlist.h  playlistlistwidget.cpp  playlistlistwidget.h  playlistmanager.cpp  playlistmanager.h  resources.qrc  singleapplication.cpp  singleapplication.h  songinfodialog.cpp  songinfodialog.h  songlistwidget.cpp  songlistwidget.h  transcodedialog.cpp  transcodedialog.h
